--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,15 +1,14 @@
 div.dashboard {
     position: absolute;
-    top:0; bottom: 0; left: 0; right: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     overflow: hidden;
     display: grid;
     grid-template-columns: 96px 1fr;
     grid-template-rows: 32px 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-
-    position: absolute;
-    inset: 0;
+    grid-gap: 0;
 
     div.content {
         grid-row: 2;
@@ -21,7 +20,7 @@ div.dashboard {
 
         div.workspace {
             display: flex;
-	    flex-grow: 1;
+            flex-grow: 1;
             //grid-auto-rows: 24px;
             //grid-auto-columns: 24px;
         }
